SERVER-32210 logOp should uassert, not fassert when not primary.

(cherry picked from commit ee3d6a0f0a2f6dd23a772786326f35bfc864f7d4)